# qartographer

./: .gitignore  Makefile  graphql-server.cabal  qartographer.cabal  stack.yaml
app/: Main.hs
docs/: notes.txt
src/GraphQL/: ApM.hs  Server.hs
src/GraphQL/Server/: Core.hs  Http.hs
src/Qartographer/Client/: Http.hs
src/Qartographer/Core/: Typing.hs  Validation.hs
src/Qartographer/Integration/: Http.hs
src/Qartographer/Server/: Core.hs  Http.hs
static/: graphiql.html
test/: Spec.hs
