name:                qartographer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ejconlon/qartographer#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Eric Conlon
maintainer:          ejconlon@gmail.com
copyright:           2016 Eric Conlon
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  static/graphiql.html

library
  hs-source-dirs:      src
  exposed-modules:     Qartographer.Server.Core
                     , Qartographer.Server.Http
  build-depends:       base >= 4.9 && < 5
                     , exceptions
                     , free
                     , graphql
                     , mtl
                     , Spock
                     , text
                     , transformers
                     , transformers-base
                     , wai-middleware-static
  default-language:    Haskell2010

executable qartographer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , qartographer
  default-language:    Haskell2010

test-suite qartographer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , exceptions
                     , free
                     , graphql
                     , mtl
                     , qartographer
                     , tasty
                     , tasty-hunit
                     , text
                     , transformers
                     , transformers-base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ejconlon/qartographer
